<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailteam.DetailTeamActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"/>

        <TextView
            android:id="@+id/tv_formed_year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/formed_year"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_team_name"/>

        <TextView
            android:id="@+id/tv_formed_year_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_team_name"
            app:layout_constraintStart_toEndOf="@id/tv_formed_year_label"/>

        <TextView
            android:id="@+id/tv_stadium_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/first_event"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_formed_year_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_stadium_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_formed_year_label"
            app:layout_constraintStart_toEndOf="@id/tv_stadium_label"/>

        <TextView
            android:id="@+id/tv_country_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/country"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_stadium_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_country_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_stadium_label"
            app:layout_constraintStart_toEndOf="@id/tv_country_label"/>

        <TextView
            android:id="@+id/tv_website_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/website"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_country_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_website_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_country_label"
            app:layout_constraintStart_toEndOf="@id/tv_country_label"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_website_label"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/line"/>


        <ProgressBar
            android:id="@+id/pb_detail_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>